--- a/src/Reportes/reporteInventarios_1.jrxml
+++ b/src/Reportes/reporteInventarios_1.jrxml
@@ -183,7 +183,7 @@
 			<line>
 				<reportElement positionType="FixRelativeToBottom" x="0" y="19" width="555" height="1" uuid="56298bee-79f5-4b32-83be-b8f5fa554a0b"/>
 			</line>
-			<textField>
+			<textField pattern="###0.00;-###0.00">
 				<reportElement x="455" y="0" width="100" height="20" uuid="b79c65c6-4d51-4a56-bb00-691799ce4114"/>
 				<box>
 					<pen lineWidth="1.0"/>
