--- a/src/formulariosReportes/frmComprasReportes.form
+++ b/src/formulariosReportes/frmComprasReportes.form
@@ -36,6 +36,7 @@
         <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
           <ComponentRef name="btngTipos"/>
         </Property>
+        <Property name="selected" type="boolean" value="true"/>
         <Property name="text" type="java.lang.String" value="COMPRAS FACTURA, LIBRES"/>
       </Properties>
       <Constraints>
